--- a/src/template.html
+++ b/src/template.html
@@ -11,6 +11,7 @@
             <label for="title">Title: </label>
             <input type="text" name="title" id="title">
         </div>
+        <!-- Change this to a text area type -->
         <div class="form-field">
             <label for="description">Description: </label>
             <input type="text" name="description" id="description">
@@ -29,5 +30,16 @@
         </div>
         <button type="submit">Create task</button>
     </form>
+
+    <table>
+        <thead>
+            <tr>
+                <th>Title</th>
+                <th>Description</th>
+                <th>Due Date</th>
+            </tr>
+        </thead>
+        <tbody></tbody>
+    </table>
 </body>
 </html>
