Added select for project
Created class to manage form-related DOM manipulation and actions. Now populates select with existing project names

--- a/src/template.html
+++ b/src/template.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <form action="#" method="dialog">
+        <div id="form-field">
+            <label for="project">Project:</label>
+            <select name="project" id="project"></select>
+        </div>
         <div class="form-field">
             <label for="title">Title: </label>
             <input type="text" name="title" id="title">
