Added ability to add to dos to a specific project
Choosing project from populated select will add it to the respective array in the project manager module

--- a/src/template.html
+++ b/src/template.html
@@ -35,6 +35,8 @@
         <button type="submit">Create task</button>
     </form>
 
+    <button id="project-new">New project</button>
+
     <table>
         <thead>
             <tr>
