Created card factory class to create new card display object
Card contains title, due date, and a button

--- a/src/template.html
+++ b/src/template.html
@@ -47,5 +47,13 @@
         </thead>
         <tbody></tbody>
     </table>
+
+    <div class="card">
+        <h1>To Do</h1>
+        <p>due date</p>
+        <div class="buttons">
+            <button>do something</button>
+        </div>
+    </div>
 </body>
 </html>
