Changed view manager logic to use cards
View manager now uses card factory class to create cards and selects for new toDo div in template

--- a/src/template.html
+++ b/src/template.html
@@ -37,23 +37,6 @@
 
     <button id="project-new">New project</button>
 
-    <table>
-        <thead>
-            <tr>
-                <th>Title</th>
-                <th>Description</th>
-                <th>Due Date</th>
-            </tr>
-        </thead>
-        <tbody></tbody>
-    </table>
-
-    <div class="card">
-        <h1>To Do</h1>
-        <p>due date</p>
-        <div class="buttons">
-            <button>do something</button>
-        </div>
-    </div>
+    <div id="toDo"></div>
 </body>
 </html>
