--- a/src/template.html
+++ b/src/template.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="#" method="dialog">
+    <div id="content-area"></div>
+    <form action="#" method="">
         <div id="form-field">
             <label for="project">Project:</label>
             <select name="project" id="project"></select>
@@ -15,7 +16,6 @@
             <label for="title">Title: </label>
             <input type="text" name="title" id="title">
         </div>
-        <!-- Change this to a text area type -->
         <div class="form-field">
             <label for="description">Description: </label>
             <input type="text" name="description" id="description">
