Refactored html layout to populate via javascript
FormBuilder class creates layout, LayoutSwitcher populates display

--- a/src/template.html
+++ b/src/template.html
@@ -6,8 +6,13 @@
     <title>Document</title>
 </head>
 <body>
+    <nav>
+
+    </nav>
+
     <div id="content-area"></div>
-    <form action="#" method="">
+
+    <!-- <form action="#" method="">
         <div id="form-field">
             <label for="project">Project:</label>
             <select name="project" id="project"></select>
@@ -33,10 +38,9 @@
             </select>
         </div>
         <button type="submit">Create task</button>
-    </form>
+        <button type="button" id="project-new">New project</button>
+    </form> -->
 
-    <button id="project-new">New project</button>
-
-    <div id="toDo"></div>
+    <div id="toDo" class="hidden"></div>
 </body>
 </html>
