Added switching between layouts
All layouts are now generated via javascript and can be switched via UI buttons on page

--- a/src/template.html
+++ b/src/template.html
@@ -6,11 +6,16 @@
     <title>Document</title>
 </head>
 <body>
-    <nav>
+    <div id="grid">
+        <nav>
+            <img id="home" src="img/home-account.svg" alt="Home button">
+            <img id="new" src="img/form-select.svg" alt="New to do button">
+            <img id="all" src="img/clipboard-account.svg" alt="To do list button">
+        </nav>
+    
+        <div id="content-area"></div>
+    </div>
 
-    </nav>
-
-    <div id="content-area"></div>
 
     <!-- <form action="#" method="">
         <div id="form-field">
