Fixed an issue with layout switching
Changed childnodes to children in hide layout method

--- a/src/template.html
+++ b/src/template.html
@@ -13,37 +13,9 @@
             <img id="all" src="img/clipboard-account.svg" alt="To do list button">
         </nav>
     
-        <div id="content-area"></div>
+        <div id="content-area">
+            <button class="" id="new-project">new Project</button>
+        </div>
     </div>
-
-
-    <!-- <form action="#" method="">
-        <div id="form-field">
-            <label for="project">Project:</label>
-            <select name="project" id="project"></select>
-        </div>
-        <div class="form-field">
-            <label for="title">Title: </label>
-            <input type="text" name="title" id="title">
-        </div>
-        <div class="form-field">
-            <label for="description">Description: </label>
-            <input type="text" name="description" id="description">
-        </div>
-        <div class="form-field">
-            <label for="date">Due Date:</label>
-            <input type="date" name="date" id="date">
-        </div>
-        <div class="form-field">
-            <label for="priority">Priority:</label>
-            <select name="priority" id="priority">
-                <option value="low">Low</option>
-                <option value="medium">Medium</option>
-                <option value="high">High</option>
-            </select>
-        </div>
-        <button type="submit">Create task</button>
-        <button type="button" id="project-new">New project</button>
-    </form> -->
 </body>
 </html>
